--- a/index.css
+++ b/index.css
@@ -4,7 +4,16 @@
     margin: 0;
 }
 
-html, body {
-    width: 100%;
-    height: 100%;
+#canvas {
+    display: block;
+    width: 100vw;
+    height: 100vh;
+}
+
+.toolbar {
+    background-color: white;
+    position: fixed;
+    display: flex;
+    flex-direction: row;
+    gap: 8px;
 }
