--- a/index.css
+++ b/index.css
@@ -59,3 +59,20 @@
 #canvas {
     display: block;
 }
+
+#text-input {
+    position: fixed;
+    font-family: sans-serif;
+    font-size: 24px;
+    border: 0;
+    outline: 0;
+    resize: none;
+    max-width: 999px;
+    overflow: hidden;
+    white-space: pre;
+    background: transparent;
+}
+
+.hidden {
+    display: none;
+}
